# enso

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: PRD.md
docs/specs/: architecture.md  data-model.md  tasks.md  web.md
src/enso/: __init__.py  auth.py  cli.py  commands.py  config.py  core.py  formatting.py  frontmatter.py  jobs.py  logging_config.py  messages.py  runs.py  slack_cache.py  slack_manifest.yaml  system_prompt.md  tasks.py  updater.py
src/enso/prompts/: AGENTS.md
src/enso/providers/: __init__.py  agy.py  claude.py  codex.py  gemini.py
src/enso/skills/jobs/: SKILL.md
src/enso/skills/slack/: SKILL.md  slack_search.py
src/enso/skills/tasks/: SKILL.md
src/enso/transports/: __init__.py  slack.py  telegram.py
src/enso/web/: __init__.py  app.py  tailwind.config.js
src/enso/web/static/: app.css  tailwind.css
src/enso/web/templates/: _attachments.html  _job_toggle.html  _task_status.html  agents.html  base.html  index.html  job_detail.html  jobs.html  macros.html  run_detail.html  runs.html  skill_detail.html  skills.html  task_detail.html  task_new.html  tasks.html
tasks/: 00-overview.md  01-chat-id-type-generalization.md  02-slack-context.md  03-slack-transport.md  04-slack-formatting.md  05-cli-transport-selection.md  06-dependency-and-packaging.md  07-slack-app-setup-guide.md  08-file-handling.md  09-testing.md
tests/: conftest.py  test_cli_jobs.py  test_cli_routing.py  test_commands.py  test_config.py  test_core.py  test_formatting.py  test_frontmatter.py  test_job_execution.py  test_jobs.py  test_logging_config.py  test_messages.py  test_providers.py  test_runs.py  test_slack.py  test_slack_cache.py  test_slack_transport.py  test_tasks.py  test_telegram.py  test_updater.py  test_web.py  test_web_security.py
