[project]
name = "enso"
version = "0.11.0.dev0"
description = "Control your favourite AI agent CLIs from your phone via Telegram."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Gavin Vickery", email = "gavin@geekforbrains.com" }]
keywords = ["ai", "agent", "telegram", "claude", "codex", "gemini", "cli", "enso"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["typer>=0.12", "rich>=13.0", "croniter>=1.0", "python-telegram-bot>=22.6"]

[project.urls]
Homepage = "https://github.com/geekforbrains/enso"
Repository = "https://github.com/geekforbrains/enso"
Changelog = "https://github.com/geekforbrains/enso/blob/main/CHANGELOG.md"
Issues = "https://github.com/geekforbrains/enso/issues"

[project.optional-dependencies]
dev = ["ruff>=0.15.0", "pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
enso = "enso.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
enso = ["system_prompt.md", "skills/**/*.md"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["enso"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
